# homeautomation

./: .gitignore  Makefile  README.md  pyproject.toml
homeautomation/: main.py
systemd/: lights.service  lights.sh
tests/: test_homeautomation.py
