[tool.poetry]
name = "homeautomation"
version = "0.1.0"
description = ""
authors = ["James Hounshell <jameshounshell@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pysmartthings = "^0.7.7"
pytest-watch = "^4.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
