[tool.poetry]
name = "homeautomation"
version = "0.1.0"
description = ""
authors = ["James Hounshell <jameshounshell@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9"
pytest-watch = "pysmartthings"
aiohttp = "^3.8.1"
pysmartthings = "^0.7.7"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
